# High-Performance-Graph-Matrix-Engine

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
docs/: plan.txt  resume_summary.txt
include/hpgeom/: blocked_matrix.hpp  csr.hpp
src/: blocked_matrix.cpp  csr.cpp
tests/: CMakeLists.txt  test_csr.cpp
